RESOLVED FIXED228838
REGRESSION (r280507): ASSERTION FAILED: !undominatedPhis.contains(value) in JSC::B3::(anonymous namespace)::Validater::validatePhisAreDominatedByUpsilons()
https://bugs.webkit.org/show_bug.cgi?id=228838
Summary REGRESSION (r280507): ASSERTION FAILED: !undominatedPhis.contains(value) in J...
Ryan Haddad
Reported 2021-08-05 12:27:22 PDT
testb3 is failing on JSC debug bots, I see the following assertion failure in the logs: ASSERTION FAILED: !undominatedPhis.contains(value) ./b3/B3Validate.cpp(680) : void JSC::B3::(anonymous namespace)::Validater::validatePhisAreDominatedByUpsilons() I think it may have started with https://trac.webkit.org/changeset/280507/webkit according to https://results.webkit.org/?suite=javascriptcore-tests&test=testb3
Attachments
Patch (1.98 KB, patch)
2021-08-05 14:55 PDT, Robin Morisset
no flags
Radar WebKit Bug Importer
Comment 1 2021-08-05 12:27:51 PDT
Ryan Haddad
Comment 2 2021-08-05 12:28:16 PDT
Robin Morisset
Comment 3 2021-08-05 14:55:59 PDT
Geoffrey Garen
Comment 4 2021-08-05 14:58:10 PDT
Comment on attachment 435028 [details] Patch r=me
EWS
Comment 5 2021-08-05 15:40:04 PDT
Committed r280704 (240300@main): <https://commits.webkit.org/240300@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 435028 [details].
Note You need to log in before you can comment on or make changes to this bug.